--- a/packages/super-editor/src/pages/Index/index.less
+++ b/packages/super-editor/src/pages/Index/index.less
@@ -1,25 +1,38 @@
 .editor-container {
   .editor-top {
     width: 100%;
-    height: 15vh;
-    background-color: aqua;
+    height: 10vh;
+    border-bottom: 1px solid #000;
     text-align: center;
     font-size: 28px;
+    line-height: 10vh;
+    margin-bottom: 10px;
+    padding: 0;
+    margin: 0;
   }
+
   .editor-body {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
     width: 100%;
     height: 85vh;
+
     .editor-body-left {
       flex: 1;
+      border-right: 1px solid #000;
+      padding: 6px;
     }
+
     .editor-body-center {
-      flex: 1;
+      flex: 1.5;
+      border-right: 1px solid #000;
+      padding: 6px;
     }
+
     .editor-body-right {
       flex: 1;
+      padding: 6px;
     }
   }
 }
