--- a/packages/super-editor/src/pages/Index/container/preview/index.less
+++ b/packages/super-editor/src/pages/Index/container/preview/index.less
@@ -10,4 +10,10 @@
     height: 100%;
     z-index: 99;
   }
+
+  .occupants{
+    width: 100%;
+    height: 30px;
+    background-color: bisque;
+  }
 }
