--- a/packages/super-editor/src/pages/Index/container/preview/index.less
+++ b/packages/super-editor/src/pages/Index/container/preview/index.less
@@ -1,18 +1,29 @@
 .preview {
-  position: relative;
+  // position: relative;
   background-color: aqua;
   width: 100%;
-  height: 300px;
+  height: 700px;
 
   .clone-iframe {
-    position: absolute;
+    // position: absolute;
     width: 100%;
     height: 100%;
   }
 
-  .occupants{
+  .occupants {
     width: 100%;
     height: 30px;
     background-color: bisque;
+  }
+}
+
+.dropDemo {
+  width: 100%;
+  height: 100px;
+  border: 1px solid red;
+
+  .compInfo-container {
+    height: 100%;
+    width: 100%;
   }
 }
