feat: 拖拽基本完成【遗留bug后面优化】

--- a/packages/super-editor/src/pages/Index/container/preview/index.less
+++ b/packages/super-editor/src/pages/Index/container/preview/index.less
@@ -1,33 +1,32 @@
 .preview {
-  // position: relative;
+  position: relative;
   background-color: aqua;
   width: 100%;
   height: 700px;
 
   .clone-iframe {
-    // position: absolute;
+    position: absolute;
+    opacity: .5;
     width: 100%;
     height: 100%;
   }
 
   .occupants {
     width: 100%;
-    height: 30px;
-    background-color: bisque;
+    height: 50px;
+    background-color: rgb(228, 136, 25);
   }
 }
 
 .dropDemo {
   width: 100%;
-  height: 100px;
-  border: 1px solid red;
-
-  .compInfo-container {
-    height: 100%;
-    width: 100%;
-  }
 }
 
 .hide {
   display: none;
+}
+
+
+#preview {
+  height: 100vh;
 }
