--- a/packages/super-template/src/components/Button/index.less
+++ b/packages/super-template/src/components/Button/index.less
@@ -1,4 +1,13 @@
-.btn {
-  width: 80%;
-  background-color: aqua;
+.super-btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100px;
+ 
+  button {
+    width: 80%;
+    height: 50px;
+    background-color: red;
+    border-radius: 3px;
+  }
 }
