--- a/packages/super-editor/src/pages/Index/index.less
+++ b/packages/super-editor/src/pages/Index/index.less
@@ -1,4 +1,8 @@
 .editor-container {
+  height: 100vh;
+  box-sizing: border-box;
+  overflow: hidden;
+
   .editor-top {
     width: 100%;
     height: 10vh;
