--- a/packages/super-editor/src/pages/Index/container/preview/index.less
+++ b/packages/super-editor/src/pages/Index/container/preview/index.less
@@ -1,8 +1,15 @@
 .preview {
   position: relative;
-  background-color: aqua;
-  width: 100%;
-  height: 700px;
+  box-sizing: border-box;
+  width: 400px;
+  height: 100%;
+  background-image: url(https://img10.360buyimg.com/ddimg/jfs/t1/197185/19/11116/78547/61570904E1289267d/4ffdb5024d61c319.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  border-radius: 10px;
+  padding: 10 20px;
+  margin-left: 50%;
+  transform: translateX(-50%);
 
   .clone-iframe {
     position: absolute;
@@ -28,5 +35,6 @@
 
 
 #preview {
+  width: 100%;
   height: 100vh;
 }
