--- a/packages/super-editor/src/pages/Index/container/preview/index.less
+++ b/packages/super-editor/src/pages/Index/container/preview/index.less
@@ -3,13 +3,14 @@
   box-sizing: border-box;
   width: 400px;
   height: 100%;
-  background-image: url(https://img10.360buyimg.com/ddimg/jfs/t1/197185/19/11116/78547/61570904E1289267d/4ffdb5024d61c319.png);
+  // background-image: url(https://img10.360buyimg.com/ddimg/jfs/t1/197185/19/11116/78547/61570904E1289267d/4ffdb5024d61c319.png);
   background-repeat: no-repeat;
   background-size: 100% 100%;
   border-radius: 10px;
   padding: 10 20px;
   margin-left: 50%;
   transform: translateX(-50%);
+  border: 2px solid #999;
 
   .clone-iframe {
     position: absolute;
