--- a/packages/super-editor/src/pages/Index/container/preview/index.less
+++ b/packages/super-editor/src/pages/Index/container/preview/index.less
@@ -11,6 +11,7 @@
   margin-left: 50%;
   transform: translateX(-50%);
   border: 2px solid #999;
+  overflow: hidden;
 
   .clone-iframe {
     position: absolute;
