--- a/packages/super-editor/src/components/compConfigForm/color/index.less
+++ b/packages/super-editor/src/components/compConfigForm/color/index.less
@@ -1,4 +1,10 @@
 .super-color {
+  .super-color-demo {
+    width: 100px;
+    height: 10px;
+    border-radius: 5px;
+  }
+
   .super-color-seletor {
     transform: translate(30px, 5px);
   }
