--- a/packages/super-template/src/components/Dialog/index.less
+++ b/packages/super-template/src/components/Dialog/index.less
@@ -1,12 +1,32 @@
 .super-dialog {
-    display: flex;
     width: 100%;
-    height: 100px;
-    justify-content: center;
-    align-items: center;
-    background-color: rgb(0, 110, 255);
+    height: 100vh;
 
-    div {
-        color: #fff;
+    .outside {
+        position: fixed;
+        width: 100%;
+        height: 100vh;
+        background-color: #666;
+        z-index: 9;
+    }
+
+    .inside {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -70%);
+        background-color: #fff;
+        width: 300px;
+        height: 300px;
+        border-radius: 10px;
+        z-index: 99;
+
+        div {
+            color: #000;
+        }
     }
 }
